--- a/0603_ID BY_mobile.html
+++ b/0603_ID BY_mobile.html
@@ -83,7 +83,7 @@ a {
 .scroll-section {
 	position: relative;
 	padding-top: 50vh;   
-  border: 1px solid rgb(0, 174, 255);                           
+  /* border: 1px solid rgb(211, 0, 0);                            */
 }            
 #scroll-section-0 h1 {
 	position: relative;
@@ -95,10 +95,16 @@ a {
 #scroll-section-2 {
   padding-top: 70vh;
 }
+#scroll-section-3 {
+  padding-top: 0vh;
+}
 #scroll-section-6 {
 	display: flex;
   flex-direction: column;
   align-items: center;
+}
+#scroll-section-7 {
+  padding-top: 5vh;
 }
 .normal-text {
   font-weight: bold;
@@ -636,7 +642,7 @@ color : #FF0000;
 
 		<section class="scroll-section" id="scroll-section-2">
       <video id="vid" width="100%" autoplay="autoplay" loop="loop" muted="muted" playsinline>
-        <source src="https://szuinh.github.io/hansujinn/autoplay.mp4" type="video/mp4"> 
+        <source src="https://szuinh.github.io/hansujinn/Sequence%2005_2.mp4" type="video/mp4"> 
       </video>
       <div class="normal-text">
         단, 누르지 않으면, 절대 빠지지 않는 안전성.
@@ -706,16 +712,16 @@ color : #FF0000;
         <div class="precolour" style="width: 300px;">
           <!--색10개-->
           <div class = "pretest" style="margin-top: 10px;">
-            <div id="colour1"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/white.png" width='40' height='40' style="height: 40px;"></img><p>White</p></div>
-            <div id="colour2"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/gray.png" width='40' height='40' style="height: 40px;"></img><p>Gray</p></div>
-            <div id="colour3"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/black.png" width='40' height='40' style="height: 40px;"></img><p>Black</p></div>
-            <div id="colour4"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/red.png" width='40' height='40' style="height: 40px;"></img><p>Red</p></div>
-            <div id="colour5"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/orange.png" width='40' height='40' style="height: 40px;"></img><p>Orange</p></div>
-            <div id="colour6"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/yellow.png" width='40' height='40' style="height: 40px;"></img><p>Yellow</p></div>
-            <div id="colour7"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/green.png" width='40' height='40' style="height: 40px;"></img><p>Green</p></div>
-            <div id="colour8"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/blue.png" width='40' height='40' style="height: 40px;"></img><p>Blue</p></div>
-            <div id="colour9"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/navy.png" width='40' height='40' style="height: 40px;"></img><p>Navy</p></div>
-            <div id="colour10"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/purple.png" width='40' height='40' style="height: 40px;"></img><p>Purple</p></div>
+            <div id="colour1"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/white.png" width='40' height='40' style="height: 40px;"></img><p>White</p></div>
+            <div id="colour2"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/gray.png" width='40' height='40' style="height: 40px;"></img><p>Gray</p></div>
+            <div id="colour3"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/black.png" width='40' height='40' style="height: 40px;"></img><p>Black</p></div>
+            <div id="colour4"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/red.png" width='40' height='40' style="height: 40px;"></img><p>Red</p></div>
+            <div id="colour5"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/orange.png" width='40' height='40' style="height: 40px;"></img><p>Orange</p></div>
+            <div id="colour6"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/yellow.png" width='40' height='40' style="height: 40px;"></img><p>Yellow</p></div>
+            <div id="colour7"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/green.png" width='40' height='40' style="height: 40px;"></img><p>Green</p></div>
+            <div id="colour8"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/blue.png" width='40' height='40' style="height: 40px;"></img><p>Blue</p></div>
+            <div id="colour9"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/navy.png" width='40' height='40' style="height: 40px;"></img><p>Navy</p></div>
+            <div id="colour10"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/purple.png" width='40' height='40' style="height: 40px;"></img><p>Purple</p></div>
           </div><br>
         
           <!-- 파일 선택 -->
@@ -759,7 +765,7 @@ color : #FF0000;
 
     document.getElementById('vid').play();
 
-      document.getElementById('A').style.fontWeight = "bold";
+      document.getElementById('A').style.color = "#2255b0";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -813,13 +819,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
       document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-      document.getElementById('A').style.fontWeight = "bold";
-      document.getElementById('B').style.fontWeight = "normal";
-      document.getElementById('C').style.fontWeight = "normal";
-      document.getElementById('D').style.fontWeight = "normal";
-      document.getElementById('E').style.fontWeight = "normal";
-      document.getElementById('F').style.fontWeight = "normal";
-      document.getElementById('G').style.fontWeight = "normal";
+      document.getElementById('A').style.color = "#2255b0";
+      document.getElementById('B').style.color = "#000000";
+      document.getElementById('C').style.color = "#000000";
+      document.getElementById('D').style.color = "#000000";
+      document.getElementById('E').style.color = "#000000";
+      document.getElementById('F').style.color = "#000000";
+      document.getElementById('G').style.color = "#000000";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -874,13 +880,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
       document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-      document.getElementById('A').style.fontWeight = "normal";
-      document.getElementById('B').style.fontWeight = "bold";
-      document.getElementById('C').style.fontWeight = "normal";
-      document.getElementById('D').style.fontWeight = "normal";
-      document.getElementById('E').style.fontWeight = "normal";
-      document.getElementById('F').style.fontWeight = "normal";
-      document.getElementById('G').style.fontWeight = "normal";
+      document.getElementById('A').style.color = "#000000";
+      document.getElementById('B').style.color = "#2255b0";
+      document.getElementById('C').style.color = "#000000";
+      document.getElementById('D').style.color = "#000000";
+      document.getElementById('E').style.color = "#000000";
+      document.getElementById('F').style.color = "#000000";
+      document.getElementById('G').style.color = "#000000";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -935,13 +941,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
       document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-      document.getElementById('A').style.fontWeight = "normal";
-      document.getElementById('B').style.fontWeight = "normal";
-      document.getElementById('C').style.fontWeight = "bold";
-      document.getElementById('D').style.fontWeight = "normal";
-      document.getElementById('E').style.fontWeight = "normal";
-      document.getElementById('F').style.fontWeight = "normal";
-      document.getElementById('G').style.fontWeight = "normal";
+      document.getElementById('A').style.color = "#000000";
+      document.getElementById('B').style.color = "#000000";
+      document.getElementById('C').style.color = "#2255b0";
+      document.getElementById('D').style.color = "#000000";
+      document.getElementById('E').style.color = "#000000";
+      document.getElementById('F').style.color = "#000000";
+      document.getElementById('G').style.color = "#000000";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -996,13 +1002,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
       document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-      document.getElementById('A').style.fontWeight = "normal";
-      document.getElementById('B').style.fontWeight = "normal";
-      document.getElementById('C').style.fontWeight = "normal";
-      document.getElementById('D').style.fontWeight = "bold";
-      document.getElementById('E').style.fontWeight = "normal";
-      document.getElementById('F').style.fontWeight = "normal";
-      document.getElementById('G').style.fontWeight = "normal";
+      document.getElementById('A').style.color = "#000000";
+      document.getElementById('B').style.color = "#000000";
+      document.getElementById('C').style.color = "#000000";
+      document.getElementById('D').style.color = "#2255b0";
+      document.getElementById('E').style.color = "#000000";
+      document.getElementById('F').style.color = "#000000";
+      document.getElementById('G').style.color = "#000000";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -1057,13 +1063,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
       document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-      document.getElementById('A').style.fontWeight = "normal";
-      document.getElementById('B').style.fontWeight = "normal";
-      document.getElementById('C').style.fontWeight = "normal";
-      document.getElementById('D').style.fontWeight = "normal";
-      document.getElementById('E').style.fontWeight = "bold";
-      document.getElementById('F').style.fontWeight = "normal";
-      document.getElementById('G').style.fontWeight = "normal";
+      document.getElementById('A').style.color = "#000000";
+      document.getElementById('B').style.color = "#000000";
+      document.getElementById('C').style.color = "#000000";
+      document.getElementById('D').style.color = "#000000";
+      document.getElementById('E').style.color = "#2255b0";
+      document.getElementById('F').style.color = "#000000";
+      document.getElementById('G').style.color = "#000000";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -1118,13 +1124,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "5px solid #ffffff";
       document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-      document.getElementById('A').style.fontWeight = "normal";
-      document.getElementById('B').style.fontWeight = "normal";
-      document.getElementById('C').style.fontWeight = "normal";
-      document.getElementById('D').style.fontWeight = "normal";
-      document.getElementById('E').style.fontWeight = "normal";
-      document.getElementById('F').style.fontWeight = "bold";
-      document.getElementById('G').style.fontWeight = "normal";
+      document.getElementById('A').style.color = "#000000";
+      document.getElementById('B').style.color = "#000000";
+      document.getElementById('C').style.color = "#000000";
+      document.getElementById('D').style.color = "#000000";
+      document.getElementById('E').style.color = "#000000";
+      document.getElementById('F').style.color = "#2255b0";
+      document.getElementById('G').style.color = "#000000";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -1179,13 +1185,13 @@ color : #FF0000;
       document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
       document.getElementById('G').style.borderBottom = "5px solid #ffffff";
 
-      document.getElementById('A').style.fontWeight = "normal";
-      document.getElementById('B').style.fontWeight = "normal";
-      document.getElementById('C').style.fontWeight = "normal";
-      document.getElementById('D').style.fontWeight = "normal";
-      document.getElementById('E').style.fontWeight = "normal";
-      document.getElementById('F').style.fontWeight = "normal";
-      document.getElementById('G').style.fontWeight = "bold";
+      document.getElementById('A').style.color = "#000000";
+      document.getElementById('B').style.color = "#000000";
+      document.getElementById('C').style.color = "#000000";
+      document.getElementById('D').style.color = "#000000";
+      document.getElementById('E').style.color = "#000000";
+      document.getElementById('F').style.color = "#000000";
+      document.getElementById('G').style.color = "#2255b0";
 
       document.getElementById('colour1').onclick = function() {colour1()};
       function colour1() {
@@ -1260,8 +1266,8 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 36,
-            imageSequence: [0, 35],
+            videoImageCount: 37,
+            imageSequence: [0, 36],
             canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
             canvas_opacity_out: [1, 0, { start: 0.8, end: 0.9}],
             messageA_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
@@ -1293,9 +1299,9 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 150,
-            imageSequence: [0, 149],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
+            videoImageCount: 170,
+            imageSequence: [0, 169],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
             canvas_opacity_out: [1, 0, { start: 0.9, end: 0.95}],
             messageF_opacity_in: [0, 1, {start: 0.1, end: 0.1}],
             messageF_opacity_out: [1, 0, {start: 0.2, end: 0.2}],
@@ -1319,7 +1325,7 @@ color : #FF0000;
         {
           //3
           type: 'sticky',
-          heightNum: 5,
+          heightNum: 3,
           scrollHeight: 0,
           objs: {
             container: document.querySelector('#scroll-section-3'),
@@ -1330,14 +1336,14 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 57,
-            imageSequence: [0, 56],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
-            canvas_opacity_out: [1, 0, { start: 0.7, end: 0.8}],
-            messageK_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
-            messageK_opacity_out: [1, 0, {start: 0.7, end: 0.8}],
-            messageM_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
-            messageM_opacity_out: [1, 0, {start: 0.7, end: 0.8}]
+            videoImageCount: 36,
+            imageSequence: [0, 35],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
+            canvas_opacity_out: [1, 0, { start: 0.55, end: 0.65}],
+            messageK_opacity_in: [0, 1, {start: 0.01, end: 0.1}],
+            messageK_opacity_out: [1, 0, {start: 0.55, end: 0.65}],
+            messageM_opacity_in: [0, 1, {start: 0.01, end: 0.1}],
+            messageM_opacity_out: [1, 0, {start: 0.55, end: 0.65}]
           }
         },
         {
@@ -1355,10 +1361,10 @@ color : #FF0000;
           values: {
             videoImageCount: 50,
             imageSequence: [0, 49],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
-            canvas_opacity_out: [1, 0, { start: 0.7, end: 0.8}],
-            messageO_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
-            messageO_opacity_out: [1, 0, {start: 0.7, end: 0.8}],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
+            canvas_opacity_out: [1, 0, { start: 0.65, end: 0.75}],
+            messageO_opacity_in: [0, 1, {start: 0.01, end: 0.1}],
+            messageO_opacity_out: [1, 0, {start: 0.65, end: 0.75}],
           }
         },
         {
@@ -1409,14 +1415,14 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 86,
-            imageSequence: [0, 85],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
-            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.95}],
+            videoImageCount: 96,
+            imageSequence: [0, 95],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
+            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.99}],
             messageS_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
             messageS_opacity_out: [1, 0, {start: 0.45, end: 0.54}],
             messageT_opacity_in: [0, 1, {start: 0.55, end: 0.65}],
-            messageT_opacity_out: [1, 0, {start: 0.9, end: 0.95}]
+            messageT_opacity_out: [1, 0, {start: 0.9, end: 0.99}]
           }
         }
       ];
@@ -1425,7 +1431,7 @@ color : #FF0000;
         let imgElem;
         for (let i = 0; i < sceneInfo[0].values.videoImageCount; i++) {
           imgElem = new Image();
-          imgElem.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/1_80%25_up/12f/%231_80%25_up_${1 + i}.jpg`;
+          imgElem.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/1_80%25_up/12fff/%231_80%25_up_${37 + i}.jpg`;
           sceneInfo[0].objs.videoImages.push(imgElem);
         }
         let imgElem2;
@@ -1437,7 +1443,7 @@ color : #FF0000;
         let imgElem3;
           for (let i = 0; i < sceneInfo[3].values.videoImageCount; i++) {
             imgElem3 = new Image();
-            imgElem3.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/3_80%25_up/3_80%25_up_${1 + i}.png`;
+            imgElem3.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/3_80%25_up/12ff/%233_12f_${1 + i}.jpg`;
             sceneInfo[3].objs.videoImages.push(imgElem3);
           }
         let imgElem4;
