--- a/0603_ID BY_PC.html
+++ b/0603_ID BY_PC.html
@@ -83,7 +83,7 @@ a {
 .scroll-section {
 	position: relative;
 	padding-top: 50vh;
-  border: 1px solid rgb(0, 238, 255);
+  /* border: 1px solid rgb(0, 255, 21); */
 }
 #scroll-section-0 h1 {
 	position: relative;
@@ -93,12 +93,18 @@ a {
 	text-align: center;
 }
 #scroll-section-2 {
-  padding-top: 70vh;
+  padding-top: 80vh;
+}
+#scroll-section-3 {
+  padding-top: 0vh;
 }
 #scroll-section-6 {
 	display: flex;
   flex-direction: column;
   align-items: center;
+}
+#scroll-section-7 {
+  padding-top: 5vh;
 }
 .normal-text {
   font-weight: bold;
@@ -555,7 +561,7 @@ color : #FF0000;
 
 		<section class="scroll-section" id="scroll-section-2">
       <video id="vid" width="100%" autoplay="autoplay" loop="loop" muted="muted" playsinline>
-        <source src="https://szuinh.github.io/hansujinn/autoplay.mp4" type="video/mp4"> 
+        <source src="https://szuinh.github.io/hansujinn/Sequence%2005_2.mp4" type="video/mp4"> 
       </video>
       <div class="normal-text">
         단, 누르지 않으면, 절대 빠지지 않는 안전성.
@@ -621,16 +627,16 @@ color : #FF0000;
         <div class="precolour" style="width: 350px;">
           <!--색10개-->
           <div class = "pretest" style="margin-top: 10px;">
-            <div id="colour1"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/white.png" width='40' height='40' style="height: 40px;"></img><p>White</p></div>
-            <div id="colour2"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/gray.png" width='40' height='40' style="height: 40px;"></img><p>Gray</p></div>
-            <div id="colour3"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/black.png" width='40' height='40' style="height: 40px;"></img><p>Black</p></div>
-            <div id="colour4"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/red.png" width='40' height='40' style="height: 40px;"></img><p>Red</p></div>
-            <div id="colour5"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/orange.png" width='40' height='40' style="height: 40px;"></img><p>Orange</p></div>
-            <div id="colour6"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/yellow.png" width='40' height='40' style="height: 40px;"></img><p>Yellow</p></div>
-            <div id="colour7"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/green.png" width='40' height='40' style="height: 40px;"></img><p>Green</p></div>
-            <div id="colour8"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/blue.png" width='40' height='40' style="height: 40px;"></img><p>Blue</p></div>
-            <div id="colour9"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/navy.png" width='40' height='40' style="height: 40px;"></img><p>Navy</p></div>
-            <div id="colour10"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/purple.png" width='40' height='40' style="height: 40px;"></img><p>Purple</p></div>
+            <div id="colour1"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/white.png" width='40' height='40' style="height: 40px;"></img><p>White</p></div>
+            <div id="colour2"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/gray.png" width='40' height='40' style="height: 40px;"></img><p>Gray</p></div>
+            <div id="colour3"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/black.png" width='40' height='40' style="height: 40px;"></img><p>Black</p></div>
+            <div id="colour4"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/red.png" width='40' height='40' style="height: 40px;"></img><p>Red</p></div>
+            <div id="colour5"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/orange.png" width='40' height='40' style="height: 40px;"></img><p>Orange</p></div>
+            <div id="colour6"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/yellow.png" width='40' height='40' style="height: 40px;"></img><p>Yellow</p></div>
+            <div id="colour7"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/green.png" width='40' height='40' style="height: 40px;"></img><p>Green</p></div>
+            <div id="colour8"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/blue.png" width='40' height='40' style="height: 40px;"></img><p>Blue</p></div>
+            <div id="colour9"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/navy.png" width='40' height='40' style="height: 40px;"></img><p>Navy</p></div>
+            <div id="colour10"><img src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/6/color/new%20color/purple.png" width='40' height='40' style="height: 40px;"></img><p>Purple</p></div>
           </div><br>
         
           <!-- 파일 선택 -->
@@ -665,7 +671,7 @@ color : #FF0000;
 		</section>
 
     <section class="normal-content">
-        <img class="img3" src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/id-by-detail1.jpg">
+        <img class="img3" src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/id-by-detail.jpg">
 		</section>
 
 	</div>
@@ -674,7 +680,7 @@ color : #FF0000;
 
     document.getElementById('vid').play();
 
-    document.getElementById('A').style.fontWeight = "bold";
+    document.getElementById('A').style.color = "#2255b0";
 
       document.getElementById('colour1').onclick = function () { colour1() };
       function colour1() {
@@ -728,13 +734,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
         document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-        document.getElementById('A').style.fontWeight = "bold";
-        document.getElementById('B').style.fontWeight = "normal";
-        document.getElementById('C').style.fontWeight = "normal";
-        document.getElementById('D').style.fontWeight = "normal";
-        document.getElementById('E').style.fontWeight = "normal";
-        document.getElementById('F').style.fontWeight = "normal";
-        document.getElementById('G').style.fontWeight = "normal";
+        document.getElementById('A').style.color = "#2255b0";
+        document.getElementById('B').style.color = "#000000";
+        document.getElementById('C').style.color = "#000000";
+        document.getElementById('D').style.color = "#000000";
+        document.getElementById('E').style.color = "#000000";
+        document.getElementById('F').style.color = "#000000";
+        document.getElementById('G').style.color = "#000000";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -789,13 +795,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
         document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-        document.getElementById('A').style.fontWeight = "normal";
-        document.getElementById('B').style.fontWeight = "bold";
-        document.getElementById('C').style.fontWeight = "normal";
-        document.getElementById('D').style.fontWeight = "normal";
-        document.getElementById('E').style.fontWeight = "normal";
-        document.getElementById('F').style.fontWeight = "normal";
-        document.getElementById('G').style.fontWeight = "normal";
+        document.getElementById('A').style.color = "#000000";
+        document.getElementById('B').style.color = "#2255b0";
+        document.getElementById('C').style.color = "#000000";
+        document.getElementById('D').style.color = "#000000";
+        document.getElementById('E').style.color = "#000000";
+        document.getElementById('F').style.color = "#000000";
+        document.getElementById('G').style.color = "#000000";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -850,13 +856,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
         document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-        document.getElementById('A').style.fontWeight = "normal";
-        document.getElementById('B').style.fontWeight = "normal";
-        document.getElementById('C').style.fontWeight = "bold";
-        document.getElementById('D').style.fontWeight = "normal";
-        document.getElementById('E').style.fontWeight = "normal";
-        document.getElementById('F').style.fontWeight = "normal";
-        document.getElementById('G').style.fontWeight = "normal";
+        document.getElementById('A').style.color = "#000000";
+        document.getElementById('B').style.color = "#000000";
+        document.getElementById('C').style.color = "#2255b0";
+        document.getElementById('D').style.color = "#000000";
+        document.getElementById('E').style.color = "#000000";
+        document.getElementById('F').style.color = "#000000";
+        document.getElementById('G').style.color = "#000000";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -911,13 +917,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
         document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-        document.getElementById('A').style.fontWeight = "normal";
-        document.getElementById('B').style.fontWeight = "normal";
-        document.getElementById('C').style.fontWeight = "normal";
-        document.getElementById('D').style.fontWeight = "bold";
-        document.getElementById('E').style.fontWeight = "normal";
-        document.getElementById('F').style.fontWeight = "normal";
-        document.getElementById('G').style.fontWeight = "normal";
+        document.getElementById('A').style.color = "#000000";
+        document.getElementById('B').style.color = "#000000";
+        document.getElementById('C').style.color = "#000000";
+        document.getElementById('D').style.color = "#2255b0";
+        document.getElementById('E').style.color = "#000000";
+        document.getElementById('F').style.color = "#000000";
+        document.getElementById('G').style.color = "#000000";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -972,13 +978,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
         document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-        document.getElementById('A').style.fontWeight = "normal";
-        document.getElementById('B').style.fontWeight = "normal";
-        document.getElementById('C').style.fontWeight = "normal";
-        document.getElementById('D').style.fontWeight = "normal";
-        document.getElementById('E').style.fontWeight = "bold";
-        document.getElementById('F').style.fontWeight = "normal";
-        document.getElementById('G').style.fontWeight = "normal";
+        document.getElementById('A').style.color = "#000000";
+        document.getElementById('B').style.color = "#000000";
+        document.getElementById('C').style.color = "#000000";
+        document.getElementById('D').style.color = "#000000";
+        document.getElementById('E').style.color = "#2255b0";
+        document.getElementById('F').style.color = "#000000";
+        document.getElementById('G').style.color = "#000000";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -1033,13 +1039,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "5px solid #ffffff";
         document.getElementById('G').style.borderBottom = "1px solid #dee2e6";
 
-        document.getElementById('A').style.fontWeight = "normal";
-        document.getElementById('B').style.fontWeight = "normal";
-        document.getElementById('C').style.fontWeight = "normal";
-        document.getElementById('D').style.fontWeight = "normal";
-        document.getElementById('E').style.fontWeight = "normal";
-        document.getElementById('F').style.fontWeight = "bold";
-        document.getElementById('G').style.fontWeight = "normal";
+        document.getElementById('A').style.color = "#000000";
+        document.getElementById('B').style.color = "#000000";
+        document.getElementById('C').style.color = "#000000";
+        document.getElementById('D').style.color = "#000000";
+        document.getElementById('E').style.color = "#000000";
+        document.getElementById('F').style.color = "#2255b0";
+        document.getElementById('G').style.color = "#000000";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -1094,13 +1100,13 @@ color : #FF0000;
         document.getElementById('F').style.borderBottom = "1px solid #dee2e6";
         document.getElementById('G').style.borderBottom = "5px solid #ffffff";
 
-        document.getElementById('A').style.fontWeight = "normal";
-        document.getElementById('B').style.fontWeight = "normal";
-        document.getElementById('C').style.fontWeight = "normal";
-        document.getElementById('D').style.fontWeight = "normal";
-        document.getElementById('E').style.fontWeight = "normal";
-        document.getElementById('F').style.fontWeight = "normal";
-        document.getElementById('G').style.fontWeight = "bold";
+        document.getElementById('A').style.color = "#000000";
+        document.getElementById('B').style.color = "#000000";
+        document.getElementById('C').style.color = "#000000";
+        document.getElementById('D').style.color = "#000000";
+        document.getElementById('E').style.color = "#000000";
+        document.getElementById('F').style.color = "#000000";
+        document.getElementById('G').style.color = "#2255b0";
 
         document.getElementById('colour1').onclick = function () { colour1() };
         function colour1() {
@@ -1175,10 +1181,10 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 36,
-            imageSequence: [0, 35],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
-            canvas_opacity_out: [1, 0, { start: 0.8, end: 0.9}],
+            videoImageCount: 37,
+            imageSequence: [0, 36],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
+            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.99}],
             messageA_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
             messageA_opacity_out: [1, 0, {start: 0.8, end: 0.9}],
             messageB_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
@@ -1209,9 +1215,9 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 150,
-            imageSequence: [0, 149],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
+            videoImageCount: 170,
+            imageSequence: [0, 169],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
             canvas_opacity_out: [1, 0, { start: 0.9, end: 0.95}],
             messageF_opacity_in: [0, 1, {start: 0.1, end: 0.1}],
             messageF_opacity_out: [1, 0, {start: 0.2, end: 0.2}],
@@ -1237,7 +1243,7 @@ color : #FF0000;
         {
           //3
           type: 'sticky',
-          heightNum: 5,
+          heightNum: 3,
           scrollHeight: 0,
           objs: {
             container: document.querySelector('#scroll-section-3'),
@@ -1250,9 +1256,9 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 57,
-            imageSequence: [0, 56],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
+            videoImageCount: 36,
+            imageSequence: [0, 35],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
             canvas_opacity_out: [1, 0, { start: 0.7, end: 0.8}],
             messageK_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
             messageK_opacity_out: [1, 0, {start: 0.7, end: 0.8}],
@@ -1278,7 +1284,7 @@ color : #FF0000;
           values: {
             videoImageCount: 50,
             imageSequence: [0, 49],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
             canvas_opacity_out: [1, 0, { start: 0.7, end: 0.8}],
             messageO_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
             messageO_opacity_out: [1, 0, {start: 0.7, end: 0.8}],
@@ -1334,14 +1340,14 @@ color : #FF0000;
             videoImages: []
           },
           values: {
-            videoImageCount: 86,
-            imageSequence: [0, 86],
-            canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2}],
-            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.95}],
+            videoImageCount: 96,
+            imageSequence: [0, 95],
+            canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1}],
+            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.99}],
             messageS_opacity_in: [0, 1, {start: 0.1, end: 0.2}],
             messageS_opacity_out: [1, 0, {start: 0.45, end: 0.54}],
             messageT_opacity_in: [0, 1, {start: 0.55, end: 0.65}],
-            messageT_opacity_out: [1, 0, {start: 0.9, end: 0.95}],
+            messageT_opacity_out: [1, 0, {start: 0.9, end: 0.99}],
             // messageH_opacity_in: [0, 1, {start: 0.5, end: 0.5}],
             // messageH_opacity_out: [1, 0, {start: 0.6, end: 0.6}],
             // messageI_opacity_in: [0, 1, {start: 0.7, end: 0.7}],
@@ -1356,7 +1362,7 @@ color : #FF0000;
         let imgElem;
         for (let i = 0; i < sceneInfo[0].values.videoImageCount; i++) {
           imgElem = new Image();
-          imgElem.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/1pc_%3A2/%231_${1 + i}.jpg`;
+          imgElem.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/1_80%25_up/12fff/%231_80%25_up_${37 + i}.jpg`;
           sceneInfo[0].objs.videoImages.push(imgElem);
         }
         let imgElem2;
@@ -1368,7 +1374,7 @@ color : #FF0000;
         let imgElem3;
           for (let i = 0; i < sceneInfo[3].values.videoImageCount; i++) {
             imgElem3 = new Image();
-            imgElem3.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/3_80%25_up/3_80%25_up_${1 + i}.png`;
+            imgElem3.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/3_80%25_up/12ff/%233_12f_${1 + i}.jpg`;
             sceneInfo[3].objs.videoImages.push(imgElem3);
           }
         let imgElem4;
