--- a/0603_ID BY_mobile.html
+++ b/0603_ID BY_mobile.html
@@ -193,7 +193,7 @@
     .scroll-section {
       position: relative;
       padding-top: 0vh;
-      border: 1px solid rgb(0, 14, 211);
+      /* border: 1px solid rgb(211, 0, 0); */
     }
 
     #scroll-section-0 h1 {
@@ -501,9 +501,6 @@
 
     .normal-content {
       margin-bottom: 10rem;
-    }
-
-    .normal-content {
       margin-top: 70vh;
     }
 
