--- a/0603_ID BY_mobile.html
+++ b/0603_ID BY_mobile.html
@@ -193,7 +193,7 @@
     .scroll-section {
       position: relative;
       padding-top: 0vh;
-      border: 1px solid rgb(7, 211, 0);
+      /* border: 1px solid rgb(0, 211, 70); */
     }
 
     #scroll-section-0 h1 {
@@ -206,6 +206,9 @@
 
     #scroll-section-2 {
       padding-top: 70vh;
+    }
+    #scroll-section-5 {
+      padding-top: 50vh;
     }
 
     #scroll-section-6 {
@@ -222,7 +225,6 @@
       height: 3em;
       font-size: 0.8rem;
       display: inline-block;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.a {
@@ -234,7 +236,6 @@
       height: 3em;
       font-size: 2.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.b {
@@ -246,7 +247,6 @@
       height: 3em;
       font-size: 2.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.c {
@@ -258,7 +258,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.f,
@@ -272,7 +271,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.h {
@@ -285,7 +283,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.i {
@@ -293,12 +290,10 @@
       align-items: center;
       justify-content: center;
       top: 35vh;
-      /* left: 15vw; */
       margin: 5px 0;
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
       color: white;
     }
 
@@ -311,7 +306,6 @@
       height: 3em;
       font-size: 2.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.o {
@@ -324,7 +318,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.p {
@@ -337,7 +330,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.k {
@@ -349,7 +341,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message.m,
@@ -362,7 +353,6 @@
       height: 3em;
       font-size: 1.5rem;
       opacity: 0;
-      /* letter-spacing: -3px; */
     }
 
     .main-message p {
@@ -384,7 +374,6 @@
       font-size: 0.8rem;
       font-weight: bold;
       color: #4c4c4c;
-      /* letter-spacing: -1px; */
     }
 
     .sticky-elem.desc-message.a {
@@ -393,7 +382,6 @@
       bottom: 15vh;
       opacity: 0;
       font-size: 0.8rem;
-      /* letter-spacing: -1px; */
     }
 
     .sticky-elem.desc-message.b {
@@ -403,7 +391,6 @@
       opacity: 0;
       color: #4c4c4c;
       font-size: 0.8rem;
-      /* letter-spacing: -1px; */
     }
 
     .sticky-elem.desc-message.c {
@@ -413,7 +400,6 @@
       opacity: 0;
       color: #4c4c4c;
       font-size: 0.8rem;
-      /* letter-spacing: -1px; */
     }
 
     .sticky-elem.desc-message.k {
@@ -423,7 +409,6 @@
       opacity: 0;
       color: #4c4c4c;
       font-size: 0.8rem;
-      /* letter-spacing: -1px; */
     }
 
     .sticky-elem.desc-message p {
@@ -664,6 +649,12 @@
     .btn-red button:before {
       background-color: #ddd;
     }
+    .font08 {
+      font-size: 0.8rem;
+    }
+    .font15 {
+      font-size: 1.5rem;
+    }
 
     @media (min-width: 760px) {
       .canvas-caption {
@@ -673,40 +664,34 @@
       .main-message.a {
         bottom: 20vh;
         font-size: 4.5rem;
-        /* letter-spacing: -5px; */
       }
 
       .main-message.b {
         bottom: 8.5vh;
         font-size: 4.5rem;
-        /* letter-spacing: -5px; */
       }
 
       .main-message.c {
         bottom: 15vh;
         font-size: 2.5rem !important;
-        /* letter-spacing: -5px; */
       }
 
       .sticky-elem.desc-message.a {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
       }
 
       .sticky-elem.desc-message.b {
-        font-size: 1.3rem;
-        /* letter-spacing: -2px; */
+        font-size: 1.5rem;
         bottom: 10vh;
       }
 
       .sticky-elem.desc-message.c {
-        font-size: 1.3rem;
-        /* letter-spacing: -2px; */
+        font-size: 15rem;
         bottom: 15vh;
       }
 
       .description {
-        font-size: 1.3rem;
-        /* letter-spacing: -2px; */
+        font-size: 1.5rem;
       }
 
       .container {
@@ -769,6 +754,35 @@
       #option8 {
         height: 500px;
       }
+      .font08 {
+        font-size: 1.5rem;
+      }
+      .font15 {
+        font-size: 2.5rem;
+      }
+      .main-message.f,
+      .main-message.g {
+        font-size: 2.5rem;
+      }
+
+      .main-message.h {
+        font-size: 2.5rem;
+      }
+
+      .main-message.i {
+        font-size: 2.5rem;
+        top: 30vh;
+      }
+      .main-message.k {
+        font-size: 2.5rem;
+      }
+      .main-message.o,
+      .main-message.p {
+        font-size: 2.5rem;
+      }
+      .normal-text {
+        font-size: 1.5rem;
+      }
     }
   </style>
 
@@ -787,7 +801,7 @@
         <p><strong>The New Kind</strong></p>
       </div>
       <div class="sticky-elem main-message b">
-        <p style="font-weight: 900;"><strong>ID BY</strong></p>
+        <p><strong>ID BY</strong></p>
       </div>
       <div class="sticky-elem desc-message a">
         <p>
@@ -807,21 +821,21 @@
       <div class="sticky-elem main-message f">
         <p style="text-align: left;">Attach<br>
           <span style="color: #00986b">with magnets</span><br>
-          <span style="font-size: 0.8rem;">자석구조로 보지않고도 붙이다.</span></p>
+          <span class="font08">자석구조로 보지않고도 붙이다.</span></p>
       </div>
       <div class="sticky-elem main-message g">
-        <p style="text-align: left;"><span style="color: #ed2225">Just Press</span><br>
+        <p style="text-align: left;"><span style="color: #ed2225">just Press</span><br>
           to detach<br>
-          <span style="font-size: 0.8rem;">버튼하나로 떼다.</span></p>
+          <span class="font08">버튼하나로 떼다.</span></p>
       </div>
       <div class="sticky-elem main-message h">
         <p style="text-align: left;">Various ways<br>
           <span style="color: #0078f2">to wear</span><br>
-          <span style="font-size: 0.8rem;">다양한 착용방식을 제공하다.</span></p>
+          <span class="font08">다양한 착용방식을 제공하다.</span></p>
       </div>
       <div class="sticky-elem main-message i">
         <p>Designed for everyone<br>
-          <span style="font-size: 0.8rem;">모든 직군의 사용자를 위해 디자인하다.</span></p>
+          <span class="font08">모든 직군의 사용자를 위해 디자인하다.</span></p>
       </div>
     </section>
 
@@ -831,7 +845,7 @@
       </video>
       <div class="normal-text">
         <p style="text-align: left;">
-          <span style="font-size: 1.5rem;">Never <br>
+          <span class="font15" >Never <br>
             comes off,<br>
             without pressing<br>
           </span>
@@ -846,7 +860,7 @@
       </div>
       <div class="sticky-elem main-message k">
         <p>How sophisticated it is!<br>
-          <span style="font-size: 0.8rem;">이 모든걸 가능하게 만든 놀랄만큼 정교한 구조.</span></p>
+          <span class="font08">이 모든걸 가능하게 만든 놀랄만큼 정교한 구조.</span></p>
       </div>
     </section>
 
@@ -869,7 +883,7 @@
     </section>
 
     <section class="scroll-section" id="scroll-section-5">
-      <div style="font-size: 30px;">Bespoke Option</div>
+      <div style="font-size: 30px; font-weight: bold;">Bespoke Option</div>
     
     
       <div id="Preview">
@@ -1021,7 +1035,7 @@
         <p style="text-align: left;">holds<br>two card<br><span style="font-size: 1rem;">두 장의 카드를 수납하다.</span></p>
       </div>
     </section>
-
+ 
     <section class="normal-content">
       <img class="img3" src="https://framebystore.cafe24.com/sujin_code_test/ID%20BY/id-by-detail1.jpg">
     </section>
@@ -1824,9 +1838,10 @@
         },
         {
           //2
-          type: 'normal',
+          type: 'sticky',
+          // type: 'normal',
           scrollHeight: 0,
-          // heightNum: 5,
+          heightNum: 1.2,
           objs: {
             container: document.querySelector('#scroll-section-2')
           }
@@ -1848,11 +1863,9 @@
             videoImageCount: 36,
             imageSequence: [0, 35],
             canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            canvas_opacity_out: [1, 0, { start: 0.55, end: 0.65 }],
+            canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
             messageK_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            messageK_opacity_out: [1, 0, { start: 0.55, end: 0.65 }]
-            // messageM_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            // messageM_opacity_out: [1, 0, { start: 0.55, end: 0.65 }]
+            messageK_opacity_out: [1, 0, { start: 0.85, end: 0.95 }]
           }
         },
         {
@@ -1869,10 +1882,10 @@
             videoImages: []
           },
           values: {
-            videoImageCount: 50,
-            imageSequence: [0, 49],
+            videoImageCount: 36,
+            imageSequence: [0, 35],
             canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            canvas_opacity_out: [1, 0, { start: 0.65, end: 0.75 }],
+            canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
             messageO_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
             messageO_opacity_out: [1, 0, { start: 0.35, end: 0.45 }],
             messageP_opacity_in: [0, 1, { start: 0.5, end: 0.6 }],
@@ -1881,9 +1894,10 @@
         },
         {
           //5
-          type: 'normal',
+          type: 'sticky',
+          // type: 'normal',
           scrollHeight: 0,
-          // heightNum: 5,
+          heightNum: 1.5,
           objs: {
             container: document.querySelector('#scroll-section-5')
           }
@@ -1899,9 +1913,9 @@
             canvas: document.querySelector('.image-blend-canvas'),
             context: document.querySelector('.image-blend-canvas').getContext('2d'),
             imagesPath: [
-              'https://framebystore.cafe24.com/sujin_code_test/ID%20BY/7/white3.jpg',
-              'https://framebystore.cafe24.com/sujin_code_test/ID%20BY/7/gray3.jpg',
-              'https://framebystore.cafe24.com/sujin_code_test/ID%20BY/7/black3.jpg'
+              'https://framebystore.cafe24.com/sungyun/frameby-produt-detail/img/idby/basic-line-m-white.png',
+              'https://framebystore.cafe24.com/sungyun/frameby-produt-detail/img/idby/basic-line-m-gray.png',
+              'https://framebystore.cafe24.com/sungyun/frameby-produt-detail/img/idby/basic-line-m-black.png'
             ],
             images: []
           },
@@ -1961,7 +1975,7 @@
         let imgElem4;
         for (let i = 0; i < sceneInfo[4].values.videoImageCount; i++) {
           imgElem4 = new Image();
-          imgElem4.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/5-/color-change_${25 + i}.jpg`;
+          imgElem4.src = `https://framebystore.cafe24.com/sujin_code_test/ID%20BY/5-/color-change_${35 + i}.jpg`;
           sceneInfo[4].objs.videoImages.push(imgElem4);
         }
         let imgElem5;
